chore: Use new Java 24 features in source code